# channel_recommendation

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt  기획서.md
DB/: dockerfile
DB/schema/: schema_1.sql
airflow/: dockerfile  requirements.txt
airflow/dags/: dag_fetch_iptv_schedule.py  dag_retrain_recommendation_model.py  example_dag.py
app/: dockerfile  main.py  requirements.txt
config/: default_config.yml
data/: movielens_sample.csv
docker/airflow/: Dockerfile
docker/app/: Dockerfile
docker/db/init/: 01_init_schema.sql
project_design_doc/: Code_Guide.md  ERD_Guide.md  Scope_of_work_1.md  Scope_of_work_2.md  Scope_of_work_3.md  Scope_of_work_4.md  data_column.txt  tree-structure.txt  기획서.md  상세 작업 계획서 4.md  상세 작업 계획서 5.md  상세 작업 계획서 6.md
project_design_doc/Scope_of_work/: Scope_of_work_1.md  Scope_of_work_2.md  Scope_of_work_3.md  Scope_of_work_4.md  Scope_of_work_5.md
src/adapters/: __init__.py  default_persona_generator.py  file_data_loader.py  gemini_content_labeler.py  keras_rating_predictor.py  selenium_schedule_crawler.py  torch_rating_predictor.py
src/domain/: dtos.py
src/domain/interfaces/: __init__.py  content_labeler_interface.py  data_loader_interface.py  persona_generator_interface.py  rating_predictor_interface.py  schedule_crawler_interface.py
src/domain/use_cases/: recommend_channels_use_case.py
src/infrastructure/: redis_cache_manager.py
src/presentation/: app.py
tests/adapters/: test_labeler_cache.py  test_persona_generator.py  test_schedule_crawler_cache.py
