# ===================================================================
#          Poetry 설정 파일 (pyproject.toml) - v3.1
# ===================================================================
#
# 이 파일 하나로 프로젝트의 모든 Python 의존성을 관리합니다.
#

[tool.poetry]
name = "ai-tv-recommendation"
version = "0.1.0"
description = "LLM과 딥러닝을 활용한 개인 맞춤형 AI TV 채널 추천 시스템"
authors = ["Chan Park <chan.park@example.com>", "Myungjae Kim <mj.kim@example.com>", "Euichul Jung <ec.jung@example.com>", "Seunghwan Yoo <sh.yoo@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# --- 머신러닝 & 데이터 처리 ---
pandas = "^2.2.2"
numpy = "^1.26.4"
tensorflow = "^2.16.1"         # NCF 모델용
scikit-learn = "^1.5.0"         # 데이터 분할 및 유틸리티용

# --- LLM & 임베딩 ---
google-generativeai = "^0.5.4"
sentence-transformers = "^3.0.1"

# --- 웹 크롤링 ---
selenium = "^4.21.0"
beautifulsoup4 = "^4.12.3"
webdriver-manager = "^4.0.1"

# --- 데이터베이스 ---
SQLAlchemy = "^2.0.30"          # ORM
pymysql = "^1.1.1"              # MySQL 드라이버
alembic = "^1.13.1"             # DB 마이그레이션

# --- 유틸리티 ---
pydantic = "^2.7.4"             # DTO 및 설정 관리
python-dotenv = "^1.0.1"        # .env 파일 로드
PyYAML = "^6.0.1"               # YAML 설정 파일 로드

# --- [app] 그룹: Streamlit 애플리케이션용 ---
[tool.poetry.group.app.dependencies]
streamlit = "^1.35.0"

# --- [dev] 그룹: 개발 및 테스트용 ---
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.0.0"
black = "^24.4.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.main.api"